--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-title: "A New Website, second edition"
+  title: "A New Website"
   navbar:
     left:
       - href: index.qmd
